force-app/main/default/objects/ssot__KnowledgeArticleVersion__dlm/fields/Aliyah_Portal_StepbyStep_Categories_c__c.field-meta.xml
<CustomField>
    <fullName>Aliyah_Portal_StepbyStep_Categories_c__c</fullName>
    <label>Aliyah Portal StepbyStep Categories</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Aliyah Portal StepbyStep Categories</labelOverride>
        <masterLabel>Aliyah Portal StepbyStep Categories</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>