force-app/main/default/objects/ssot__KnowledgeArticleVersion__dlm/fields/index_c__c.field-meta.xml
<CustomField>
    <fullName>index_c__c</fullName>
    <label>index</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>index</labelOverride>
        <masterLabel>index</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>