force-app/main/default/objects/ssot__KnowledgeArticleVersion__dlm/fields/Index_Number_c__c.field-meta.xml
<CustomField>
    <fullName>Index_Number_c__c</fullName>
    <label>Index Number</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Index Number</labelOverride>
        <masterLabel>Index Number</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>